--- a/FinPlan.Web/Pages/CostOfLiving/CostOfLiving.razor
+++ b/FinPlan.Web/Pages/CostOfLiving/CostOfLiving.razor
@@ -2552,6 +2552,8 @@
     <div class="modal d-block" style="z-index: 1050;">
         <div class="modal-dialog modal-dialog-centered modal-lg modal-fullscreen-sm-down">
             <div class="modal-content" style="border-top: 4px solid #FFD600;">
+                <div class="d-block d-md-none"><br><br /></div>
+
                 <div class="modal-header bg-light">
                     <h5 class="modal-title">
                         <i class="bi bi-star-fill text-warning me-2"></i>Welcome to Cost of Living Planning!
