--- a/FinPlan.Web/Components/Pages/Savings.razor
+++ b/FinPlan.Web/Components/Pages/Savings.razor
@@ -924,6 +924,8 @@
     <div class="modal d-block" style="z-index: 1050;">
         <div class="modal-dialog modal-dialog-centered modal-lg modal-fullscreen-sm-down">
             <div class="modal-content" style="border-top: 4px solid #FFD600;">
+               <div class="d-block d-md-none"><br><br /></div>
+
                 <div class="modal-header bg-light">
                     <h5 class="modal-title">
                         <i class="bi bi-piggy-bank-fill text-warning me-2"></i>Welcome to Savings Planning!
